responsabilidade-inicio-corrigida

--- a/index.html
+++ b/index.html
@@ -19,12 +19,9 @@
             alt="logo tech vocacional branca"
           />
         </a>
-        <a href="/index.html">Início</a>
+       <!--  <a href="/index.html">Início</a> -->
       </nav>
-      <!-- Lembrar de colocar o botao de início somente na página do formulário e resultado
-      <nav class="navbar">
-        
-      </nav>  -->
+      <!-- Lembrar de colocar o botao de início somente na página do formulário e resultado -->
     </header>
 
     <div class="banner">
