--- a/index.html
+++ b/index.html
@@ -19,9 +19,6 @@
             alt="logo tech vocacional branca"
           />
         </a>
-       <!--  <a href="/index.html">Início</a> -->
-      </nav>
-      <!-- Lembrar de colocar o botao de início somente na página do formulário e resultado -->
     </header>
 
     <div class="banner">
@@ -33,7 +30,7 @@
           exclusivamente para os setores de tecnologia e descubra o que melhor
           se encaixa para você!
         </p>
-        <button class="btnclass">Faça seu teste</button>
+        <a href="/testevocacional2.html"><button class="btnclass">Faça seu teste</button></a>
       </div>
     </div>
 
@@ -113,7 +110,7 @@
     <div class="section1 section3">
       <div class="section1text">
         <h1>Venha fazer o seu teste!</h1>
-        <button class="btnclass btnclass2">Faça seu teste</button>
+        <a href="/testevocacional2.html"><button class="btnclass btnclass2">Faça seu teste</button></a>
       </div>
     </div>
 
