--- a/index.html
+++ b/index.html
@@ -13,11 +13,7 @@
     <header class="header">
       <nav>
         <a href="/index.html">
-          <img
-            class="logo-branca"
-            src="/assets/img/Logo clara.png"
-            alt="logo tech vocacional branca"
-          />
+          <img class="logo-branca" src="/assets/img/Logo clara.png" alt="logo tech vocacional branca"/>
         </a>
     </header>
 
