--- a/resultado.html
+++ b/resultado.html
@@ -6,24 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Vocacional</title>
     <link rel="shortcut icon" type="imagex/png" href="/assets/img/Logo Azul escurop.png"/>
-    <link rel="stylesheet" href="/assets/css/style.css"/>
+    <link rel="stylesheet" href="./assets/css/style.css"/>
   </head>
 
   <body>
     <header class="header">
       <nav>
         <a href="/index.html">
-          <img
-            class="logo-branca"
-            src="/assets/img/Logo clara.png"
-            alt="logo tech vocacional branca"
+          <img class="logo-branca" src="/assets/img/Logo clara.png" alt="logo tech vocacional branca"
           />
         </a>
       </nav>
-      <!-- Lembrar de colocar o botao de início somente na página do formulário e resultado
       <nav class="navbar">
         <a href="/index.html">Início</a>
-      </nav>  -->
+      </nav>  
     </header> 
     
 
