--- a/index.html
+++ b/index.html
@@ -106,7 +106,9 @@
     <div class="section1 section3">
       <div class="section1text">
         <h1>Venha fazer o seu teste!</h1>
-        <a href="/testevocacional2.html"><button class="btnclass btnclass2">Faça seu teste</button></a>
+        <a href="/testevocacional2.html">
+          <button class="btnclass btnclass2">Faça seu teste</button>
+        </a>
       </div>
     </div>
 
