--- a/resultado.html
+++ b/resultado.html
@@ -21,6 +21,122 @@
         <a href="/index.html">Início</a>
       </nav>  
     </header> 
+
+    <div class="section4">
+      <div class="contentsection4">
+        <div class="section4text">
+          <h1>E o resultado...</h1>
+          <p>
+            Você pode ver logo abaixo o seu resultado, que foi obtido através das respostas que você nos passou!
+          </p>
+        </div>
+        <img src="./assets/img/resultados.png" />
+      </div>
+    </div>
+
+    <div class="section2">
+      <div class="contentsection2">
+        <div class="card">
+          <img src="/assets/img/dev.png">
+          <h2>
+            25% Dev Full Stack
+          </h2>
+          <p>
+            O desenvolvedor full stack é capaz de trabalhar com toda a pilha de desenvolvimento de um projeto. Além de conseguir atuar com o font-end e o back-end, esse profissional também pode contribuir em todas as etapas e partes de um sistema, como o servidor e o banco de dados.
+          </p>
+        </div>
+
+        <div class="card">
+          <img src="/assets/img/UX.png">
+          <h2>
+            25% Product Design
+          </h2>
+          <p>
+            É o profissional responsável pela estética de uma plataforma digital, com o objetivo de proporcionar uma melhor experiência ao usuário, baseada em seu comportamento, seja por meio da usabilidade, utilidade ou conveniência oferecidas na interação com o produto.
+          </p>
+        </div>
+
+        <div class="card">
+          <img src="/assets/img/Marketing.png">
+          <h2>
+            25% Marketing
+          </h2>
+          <p>
+            Atua na criação, desenvolvimento e análise de testes para melhorias contínuas do processo de um negócio. Seu principal objetivo é fazer com que a empresa cresça cada vez mais, otimizando os recursos existentes e sem precisar investir em extras.
+          </p>
+        </div>
+
+        <div class="card">
+          <img src="/assets/img/sales.png">
+          <h2>
+            25% Vendas (inside sales)
+          </h2>
+          <p>
+            É um modelo de venda na qual o vendedor não visita fisicamente o cliente. Todo o processo de vendas, desde a etapa de prospectar novos clientes até a assinatura do contrato, bem como a relação pós-venda, é realizada por meio de canais como telefone, e-mail, redes sociais e videoconferências.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="section5">
+      <a href="/testevocacional2.html"><button class="btnsection5">Novo teste</button></a>
+      <a href=" "><button class="btnsection5">Compartilhar</button></a>
+    </div>
+
+    <div class="section6">
+      <h1>Confira os cursos que podem te ajudar!</h1>
+    </div>
+
+    <div class="section7">
+      <div class="content7">
+        <h1>GAMA ACADEMY</h1>
+        <p>Clique e confira!</p>
+      </div>
+    </div>
+
+    <div class="section8">
+      <div class="contentsection8">
+        <div class="card8">
+          <img src="./assets/img/gama-DEV.png">
+          <h2>
+            Dev Full Stack
+          </h2>
+          <p>
+            Dev Full Stack é a pessoa capaz de entregar softwares do início ao fim.
+          </p>
+        </div>
+
+        <div class="card8">
+          <img src="./assets/img/gama-UX.png">
+          <h2>
+            Product Designer
+          </h2>
+          <p>
+            Product Designer é a pessoa responsável por realizar tanto atividades de User Experience (UX) quanto User Interface (UI).
+          </p>
+        </div>
+
+        <div class="card8">
+          <img src="./assets/img/gama-MKT.png">
+          <h2>
+            Growth Marketing
+          </h2>
+          <p>
+            Growth Hacker é o profissional de marketing digital orientado a experimentos dentro da empresa.
+          </p>
+        </div>
+
+        <div class="card8">
+          <img src="./assets/img/gama-Vendas.png">
+          <h2>
+            Inside Sales
+          </h2>
+          <p>
+            Inside Sales é a pessoa responsável por encontrar, negociar e fechar oportunidades de novos negócios para a empresa, seja seu foco B2C ou B2B.
+          </p>
+        </div>
+      </div>
+    </div>
     
 
 
