--- a/testevocacional2.html
+++ b/testevocacional2.html
@@ -149,10 +149,7 @@
           </div>
           <br>
       </div>
-
-
-      <button class="btnclass btnclass2">Enviar respostas</button>
-
+        <a href="/resultado.html"><button class="btnclass btnclass2">Enviar respostas</button></a>
       </form>
     </div>
   </div>
