--- a/resultado.html
+++ b/resultado.html
@@ -39,7 +39,7 @@
         <div class="card">
           <img src="/assets/img/dev.png">
           <h2>
-            25% Dev Full Stack
+            25% Dev Fullstack
           </h2>
           <p>
             O desenvolvedor full stack é capaz de trabalhar com toda a pilha de desenvolvimento de um projeto. Além de conseguir atuar com o font-end e o back-end, esse profissional também pode contribuir em todas as etapas e partes de um sistema, como o servidor e o banco de dados.
@@ -69,7 +69,7 @@
         <div class="card">
           <img src="/assets/img/sales.png">
           <h2>
-            25% Vendas (inside sales)
+            25% Inside sales
           </h2>
           <p>
             É um modelo de venda na qual o vendedor não visita fisicamente o cliente. Todo o processo de vendas, desde a etapa de prospectar novos clientes até a assinatura do contrato, bem como a relação pós-venda, é realizada por meio de canais como telefone, e-mail, redes sociais e videoconferências.
@@ -93,13 +93,12 @@
         <p>Clique e confira!</p>
       </div>
     </div>
-
     <div class="section8">
       <div class="contentsection8">
         <div class="card8">
           <img src="./assets/img/gama-DEV.png">
           <h2>
-            Dev Full Stack
+            Dev Fullstack
           </h2>
           <p>
             Dev Full Stack é a pessoa capaz de entregar softwares do início ao fim.
@@ -137,10 +136,160 @@
         </div>
       </div>
     </div>
+
+    <div class="section9">
+      <h1>Confira alguns livros excelentes de cada área!</h1>
+    </div>
+
+    <div class="section10">
+      <div class="content10">
+        <h1>Dev Fullstack</h1>
+      </div>
+    </div>
+
+    <div class="section11">
+      <div class="contentsection11">
+        <div class="card11">
+          <img src="./assets/img/Livro dev 3.jpg">
+          <h2>
+            Código limpo: Habilidades práticas do Agile Software
+          </h2>
+          <p>
+            R$ 59,89
+          </p>
+        </div>
+        <div class="card11">
+          <img src="./assets/img/Livro dev 2.jpg">
+          <h2>
+            Use a cabeça!: padrões de projetos
+          </h2>
+          <p>
+            R$ 106,60
+          </p>
+        </div>
+        <div class="card11">
+          <img src="./assets/img/Livro Dev 1.jpg">
+          <h2>
+            Algoritmos e Estruturas de Dados
+          </h2>
+          <p>
+            R$ 159,00
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="section12">
+      <div class="content12">
+        <h1>Inside Sales</h1>
+      </div>
+    </div>
+
+    <div class="section13">
+      <div class="contentsection13">
+        <div class="card13">
+          <img src="./assets/img/Livro sales 2.jpg">
+          <h2>
+            Never Split the Difference: Negotiating As If Your Life Depended On It (English Edition)
+          </h2>
+          <p>
+            R$ 164,59
+          </p>
+        </div>
+        <div class="card13">
+          <img src="./assets/img/Livro sales 1.jpg">
+          <h2>
+            Alcançando Excelência em Vendas - Spin Selling
+          </h2>
+          <p>
+            R$ 67,64
+          </p>
+        </div>
+        <div class="card13">
+          <img src="./assets/img/Livro sales 3.jpg">
+          <h2>
+            The Sandler Rules: 49 Timeless Selling Principles and How to Apply Them (English Edition)
+          </h2>
+          <p>
+            R$ 722,00
+          </p>
+        </div>
+      </div>
+    </div>
     
+    <div class="section14">
+      <div class="content14">
+        <h1>Product Design</h1>
+      </div>
+    </div>
 
-
-
+    <div class="section15">
+      <div class="contentsection15">
+        <div class="card15">
+          <img src="./assets/img/Livro 1 UX.jpg">
+          <h2>
+            Sprint. O Método Usado no Google Para Testar e Aplicar Novas Ideias em Apenas Cinco Dias
+          </h2>
+          <p>
+            R$ 27,89
+          </p>
+        </div>
+        <div class="card15">
+          <img src="./assets/img/Livro UX 2.png">
+          <h2>
+            O design do dia a dia
+          </h2>
+          <p>
+            R$ 28,08
+          </p>
+        </div>
+        <div class="card15">
+          <img src="./assets/img/Livro UX 3.jpg">
+          <h2>
+            Não me faça pensar: atualizado
+          </h2>
+          <p>
+            R$ 59,21
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="section16">
+      <div class="content16">
+        <h1>Growth Marketing</h1>
+      </div>
+    </div>
+    <div class="section17">
+      <div class="contentsection17">
+        <div class="card17">
+          <img src="./assets/img/Livro MKT 1.jpg">
+          <h2>
+            As armas da persuasão
+          </h2>
+          <p>
+            R$ 37,40
+          </p>
+        </div>
+        <div class="card17">
+          <img src="./assets/img/Livro MKT 2.jpg">
+          <h2>
+            Crossing the Chasm, 3rd Edition: Marketing and Selling Disruptive Products to Mainstream Customers
+          </h2>
+          <p>
+            R$ 106,60
+          </p>
+        </div>
+        <div class="card17">
+          <img src="./assets/img/Livro MKT 3.jpg">
+          <h2>
+            How Brands Grow: What Marketers Don't Know
+          </h2>
+          <p>
+            R$ 255,65
+          </p>
+        </div>
+      </div>
+    </div>
     <footer>
       <p>Trabalho desenvolvido pelo Grupo 1 - Gama Academy</p>
     </footer>
