--- a/testevocacional2.html
+++ b/testevocacional2.html
@@ -148,9 +148,12 @@
               sociais.</p><br>
           </div>
           <br>
+        </form>
       </div>
-        <a href="/resultado.html"><button class="btnclass btnclass2">Enviar respostas</button></a>
-      </form>
+      <a href="/resultado.html">
+        <button class="btnclass btnclass2">Enviar respostas</button>
+      </a>
+      
     </div>
   </div>
 
