--- a/resultado.html
+++ b/resultado.html
@@ -1,298 +1,311 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tech Vocacional</title>
-    <link rel="shortcut icon" type="imagex/png" href="/assets/img/Logo Azul escurop.png"/>
-    <link rel="stylesheet" href="./assets/css/style.css"/>
-  </head>
 
-  <body>
-    <header class="header">
-      <nav>
-        <a href="/index.html">
-          <img class="logo-branca" src="/assets/img/Logo clara.png" alt="logo tech vocacional branca"
-          />
-        </a>
-      </nav>
-      <nav class="navbar">
-        <a href="/index.html">Início</a>
-      </nav>  
-    </header> 
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tech Vocacional</title>
+  <link rel="shortcut icon" type="imagex/png" href="/assets/img/Logo Azul escurop.png" />
+  <link rel="stylesheet" href="./assets/css/style.css" />
+  <script src="assets/js/script.js"></script>
 
-    <div class="section4">
-      <div class="contentsection4">
-        <div class="section4text">
-          <h1>E o resultado...</h1>
-          <p>
-            Você pode ver logo abaixo o seu resultado, que foi obtido através das respostas que você nos passou!
-          </p>
-        </div>
-        <img src="./assets/img/resultados.png" />
+</head>
+
+<body>
+  <header class="header">
+    <nav>
+      <a href="/index.html">
+        <img class="logo-branca" src="/assets/img/Logo clara.png" alt="logo tech vocacional branca" />
+      </a>
+    </nav>
+    <nav class="navbar">
+      <a href="/index.html">Início</a>
+    </nav>
+  </header>
+
+  <div class="section4">
+    <div class="contentsection4">
+      <div class="section4text">
+        <h1>E o resultado...</h1>
+        <p>
+          Você pode ver logo abaixo o seu resultado, que foi obtido através das respostas que você nos passou!
+        </p>
+      </div>
+      <img src="./assets/img/resultados.png" />
+    </div>
+  </div>
+
+  <div class="section2">
+    <div class="contentsection2">
+      <div class="card">
+        <img src="/assets/img/dev.png">
+        <h2>
+          25% Dev Fullstack
+        </h2>
+        <p>
+          O desenvolvedor full stack é capaz de trabalhar com toda a pilha de desenvolvimento de um projeto. Além de
+          conseguir atuar com o font-end e o back-end, esse profissional também pode contribuir em todas as etapas e
+          partes de um sistema, como o servidor e o banco de dados.
+        </p>
+      </div>
+
+      <div class="card">
+        <img src="/assets/img/UX.png">
+        <h2>
+          25% Product Design
+        </h2>
+        <p>
+          É o profissional responsável pela estética de uma plataforma digital, com o objetivo de proporcionar uma
+          melhor experiência ao usuário, baseada em seu comportamento, seja por meio da usabilidade, utilidade ou
+          conveniência oferecidas na interação com o produto.
+        </p>
+      </div>
+
+      <div class="card">
+        <img src="/assets/img/Marketing.png">
+        <h2>
+          25% Marketing
+        </h2>
+        <p>
+          Atua na criação, desenvolvimento e análise de testes para melhorias contínuas do processo de um negócio. Seu
+          principal objetivo é fazer com que a empresa cresça cada vez mais, otimizando os recursos existentes e sem
+          precisar investir em extras.
+        </p>
+      </div>
+
+      <div class="card">
+        <img src="/assets/img/sales.png">
+        <h2>
+          25% Inside sales
+        </h2>
+        <p>
+          É um modelo de venda na qual o vendedor não visita fisicamente o cliente. Todo o processo de vendas, desde a
+          etapa de prospectar novos clientes até a assinatura do contrato, bem como a relação pós-venda, é realizada por
+          meio de canais como telefone, e-mail, redes sociais e videoconferências.
+        </p>
       </div>
     </div>
+  </div>
 
-    <div class="section2">
-      <div class="contentsection2">
-        <div class="card">
-          <img src="/assets/img/dev.png">
-          <h2>
-            25% Dev Fullstack
-          </h2>
-          <p>
-            O desenvolvedor full stack é capaz de trabalhar com toda a pilha de desenvolvimento de um projeto. Além de conseguir atuar com o font-end e o back-end, esse profissional também pode contribuir em todas as etapas e partes de um sistema, como o servidor e o banco de dados.
-          </p>
-        </div>
+  <div class="section5">
+    <a href="/testevocacional2.html"><button class="btnsection5">Novo teste</button></a>
+    <a href=" "><button class="btnsection5">Compartilhar</button></a>
+  </div>
 
-        <div class="card">
-          <img src="/assets/img/UX.png">
-          <h2>
-            25% Product Design
-          </h2>
-          <p>
-            É o profissional responsável pela estética de uma plataforma digital, com o objetivo de proporcionar uma melhor experiência ao usuário, baseada em seu comportamento, seja por meio da usabilidade, utilidade ou conveniência oferecidas na interação com o produto.
-          </p>
-        </div>
+  <div class="section6">
+    <h1>Confira os cursos que podem te ajudar!</h1>
+  </div>
 
-        <div class="card">
-          <img src="/assets/img/Marketing.png">
-          <h2>
-            25% Marketing
-          </h2>
-          <p>
-            Atua na criação, desenvolvimento e análise de testes para melhorias contínuas do processo de um negócio. Seu principal objetivo é fazer com que a empresa cresça cada vez mais, otimizando os recursos existentes e sem precisar investir em extras.
-          </p>
-        </div>
+  <div class="section7">
+    <div class="content7">
+      <h1>GAMA ACADEMY</h1>
+      <p>Clique e confira!</p>
+    </div>
+  </div>
+  <div class="section8">
+    <div class="contentsection8">
+      <div class="card8">
+        <img src="./assets/img/gama-DEV.png">
+        <h2>
+          Dev Fullstack
+        </h2>
+        <p>
+          Dev Full Stack é a pessoa capaz de entregar softwares do início ao fim.
+        </p>
+      </div>
 
-        <div class="card">
-          <img src="/assets/img/sales.png">
-          <h2>
-            25% Inside sales
-          </h2>
-          <p>
-            É um modelo de venda na qual o vendedor não visita fisicamente o cliente. Todo o processo de vendas, desde a etapa de prospectar novos clientes até a assinatura do contrato, bem como a relação pós-venda, é realizada por meio de canais como telefone, e-mail, redes sociais e videoconferências.
-          </p>
-        </div>
+      <div class="card8">
+        <img src="./assets/img/gama-UX.png">
+        <h2>
+          Product Designer
+        </h2>
+        <p>
+          Product Designer é a pessoa responsável por realizar tanto atividades de User Experience (UX) quanto User
+          Interface (UI).
+        </p>
+      </div>
+
+      <div class="card8">
+        <img src="./assets/img/gama-MKT.png">
+        <h2>
+          Growth Marketing
+        </h2>
+        <p>
+          Growth Hacker é o profissional de marketing digital orientado a experimentos dentro da empresa.
+        </p>
+      </div>
+
+      <div class="card8">
+        <img src="./assets/img/gama-Vendas.png">
+        <h2>
+          Inside Sales
+        </h2>
+        <p>
+          Inside Sales é a pessoa responsável por encontrar, negociar e fechar oportunidades de novos negócios para a
+          empresa, seja seu foco B2C ou B2B.
+        </p>
       </div>
     </div>
+  </div>
 
-    <div class="section5">
-      <a href="/testevocacional2.html"><button class="btnsection5">Novo teste</button></a>
-      <a href=" "><button class="btnsection5">Compartilhar</button></a>
+  <div class="section9">
+    <h1>Confira alguns livros excelentes de cada área!</h1>
+  </div>
+
+  <div class="section10">
+    <div class="content10">
+      <h1>Dev Fullstack</h1>
     </div>
+  </div>
 
-    <div class="section6">
-      <h1>Confira os cursos que podem te ajudar!</h1>
-    </div>
-
-    <div class="section7">
-      <div class="content7">
-        <h1>GAMA ACADEMY</h1>
-        <p>Clique e confira!</p>
+  <div class="section11">
+    <div class="contentsection11">
+      <div class="card11">
+        <img src="./assets/img/Livro dev 3.jpg">
+        <h2>
+          Código limpo: Habilidades práticas do Agile Software
+        </h2>
+        <p>
+          R$ 59,89
+        </p>
+      </div>
+      <div class="card11">
+        <img src="./assets/img/Livro dev 2.jpg">
+        <h2>
+          Use a cabeça!: padrões de projetos
+        </h2>
+        <p>
+          R$ 106,60
+        </p>
+      </div>
+      <div class="card11">
+        <img src="./assets/img/Livro Dev 1.jpg">
+        <h2>
+          Algoritmos e Estruturas de Dados
+        </h2>
+        <p>
+          R$ 159,00
+        </p>
       </div>
     </div>
-    <div class="section8">
-      <div class="contentsection8">
-        <div class="card8">
-          <img src="./assets/img/gama-DEV.png">
-          <h2>
-            Dev Fullstack
-          </h2>
-          <p>
-            Dev Full Stack é a pessoa capaz de entregar softwares do início ao fim.
-          </p>
-        </div>
+  </div>
 
-        <div class="card8">
-          <img src="./assets/img/gama-UX.png">
-          <h2>
-            Product Designer
-          </h2>
-          <p>
-            Product Designer é a pessoa responsável por realizar tanto atividades de User Experience (UX) quanto User Interface (UI).
-          </p>
-        </div>
+  <div class="section12">
+    <div class="content12">
+      <h1>Inside Sales</h1>
+    </div>
+  </div>
 
-        <div class="card8">
-          <img src="./assets/img/gama-MKT.png">
-          <h2>
-            Growth Marketing
-          </h2>
-          <p>
-            Growth Hacker é o profissional de marketing digital orientado a experimentos dentro da empresa.
-          </p>
-        </div>
-
-        <div class="card8">
-          <img src="./assets/img/gama-Vendas.png">
-          <h2>
-            Inside Sales
-          </h2>
-          <p>
-            Inside Sales é a pessoa responsável por encontrar, negociar e fechar oportunidades de novos negócios para a empresa, seja seu foco B2C ou B2B.
-          </p>
-        </div>
+  <div class="section13">
+    <div class="contentsection13">
+      <div class="card13">
+        <img src="./assets/img/Livro sales 2.jpg">
+        <h2>
+          Never Split the Difference: Negotiating As If Your Life Depended On It (English Edition)
+        </h2>
+        <p>
+          R$ 164,59
+        </p>
+      </div>
+      <div class="card13">
+        <img src="./assets/img/Livro sales 1.jpg">
+        <h2>
+          Alcançando Excelência em Vendas - Spin Selling
+        </h2>
+        <p>
+          R$ 67,64
+        </p>
+      </div>
+      <div class="card13">
+        <img src="./assets/img/Livro sales 3.jpg">
+        <h2>
+          The Sandler Rules: 49 Timeless Selling Principles and How to Apply Them (English Edition)
+        </h2>
+        <p>
+          R$ 722,00
+        </p>
       </div>
     </div>
+  </div>
 
-    <div class="section9">
-      <h1>Confira alguns livros excelentes de cada área!</h1>
+  <div class="section14">
+    <div class="content14">
+      <h1>Product Design</h1>
     </div>
+  </div>
 
-    <div class="section10">
-      <div class="content10">
-        <h1>Dev Fullstack</h1>
+  <div class="section15">
+    <div class="contentsection15">
+      <div class="card15">
+        <img src="./assets/img/Livro 1 UX.jpg">
+        <h2>
+          Sprint. O Método Usado no Google Para Testar e Aplicar Novas Ideias em Apenas Cinco Dias
+        </h2>
+        <p>
+          R$ 27,89
+        </p>
+      </div>
+      <div class="card15">
+        <img src="./assets/img/Livro UX 2.png">
+        <h2>
+          O design do dia a dia
+        </h2>
+        <p>
+          R$ 28,08
+        </p>
+      </div>
+      <div class="card15">
+        <img src="./assets/img/Livro UX 3.jpg">
+        <h2>
+          Não me faça pensar: atualizado
+        </h2>
+        <p>
+          R$ 59,21
+        </p>
       </div>
     </div>
+  </div>
+  <div class="section16">
+    <div class="content16">
+      <h1>Growth Marketing</h1>
+    </div>
+  </div>
+  <div class="section17">
+    <div class="contentsection17">
+      <div class="card17">
+        <img src="./assets/img/Livro MKT 1.jpg">
+        <h2>
+          As armas da persuasão
+        </h2>
+        <p>
+          R$ 37,40
+        </p>
+      </div>
+      <div class="card17">
+        <img src="./assets/img/Livro MKT 2.jpg">
+        <h2>
+          Crossing the Chasm, 3rd Edition: Marketing and Selling Disruptive Products to Mainstream Customers
+        </h2>
+        <p>
+          R$ 106,60
+        </p>
+      </div>
+      <div class="card17">
+        <img src="./assets/img/Livro MKT 3.jpg">
+        <h2>
+          How Brands Grow: What Marketers Don't Know
+        </h2>
+        <p>
+          R$ 255,65
+        </p>
+      </div>
+    </div>
+  </div>
+  <footer>
+    <p>Trabalho desenvolvido pelo Grupo 1 - Gama Academy</p>
+  </footer>
+  <script src="/assets/js/script.js"></script>
+</body>
 
-    <div class="section11">
-      <div class="contentsection11">
-        <div class="card11">
-          <img src="./assets/img/Livro dev 3.jpg">
-          <h2>
-            Código limpo: Habilidades práticas do Agile Software
-          </h2>
-          <p>
-            R$ 59,89
-          </p>
-        </div>
-        <div class="card11">
-          <img src="./assets/img/Livro dev 2.jpg">
-          <h2>
-            Use a cabeça!: padrões de projetos
-          </h2>
-          <p>
-            R$ 106,60
-          </p>
-        </div>
-        <div class="card11">
-          <img src="./assets/img/Livro Dev 1.jpg">
-          <h2>
-            Algoritmos e Estruturas de Dados
-          </h2>
-          <p>
-            R$ 159,00
-          </p>
-        </div>
-      </div>
-    </div>
-
-    <div class="section12">
-      <div class="content12">
-        <h1>Inside Sales</h1>
-      </div>
-    </div>
-
-    <div class="section13">
-      <div class="contentsection13">
-        <div class="card13">
-          <img src="./assets/img/Livro sales 2.jpg">
-          <h2>
-            Never Split the Difference: Negotiating As If Your Life Depended On It (English Edition)
-          </h2>
-          <p>
-            R$ 164,59
-          </p>
-        </div>
-        <div class="card13">
-          <img src="./assets/img/Livro sales 1.jpg">
-          <h2>
-            Alcançando Excelência em Vendas - Spin Selling
-          </h2>
-          <p>
-            R$ 67,64
-          </p>
-        </div>
-        <div class="card13">
-          <img src="./assets/img/Livro sales 3.jpg">
-          <h2>
-            The Sandler Rules: 49 Timeless Selling Principles and How to Apply Them (English Edition)
-          </h2>
-          <p>
-            R$ 722,00
-          </p>
-        </div>
-      </div>
-    </div>
-    
-    <div class="section14">
-      <div class="content14">
-        <h1>Product Design</h1>
-      </div>
-    </div>
-
-    <div class="section15">
-      <div class="contentsection15">
-        <div class="card15">
-          <img src="./assets/img/Livro 1 UX.jpg">
-          <h2>
-            Sprint. O Método Usado no Google Para Testar e Aplicar Novas Ideias em Apenas Cinco Dias
-          </h2>
-          <p>
-            R$ 27,89
-          </p>
-        </div>
-        <div class="card15">
-          <img src="./assets/img/Livro UX 2.png">
-          <h2>
-            O design do dia a dia
-          </h2>
-          <p>
-            R$ 28,08
-          </p>
-        </div>
-        <div class="card15">
-          <img src="./assets/img/Livro UX 3.jpg">
-          <h2>
-            Não me faça pensar: atualizado
-          </h2>
-          <p>
-            R$ 59,21
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="section16">
-      <div class="content16">
-        <h1>Growth Marketing</h1>
-      </div>
-    </div>
-    <div class="section17">
-      <div class="contentsection17">
-        <div class="card17">
-          <img src="./assets/img/Livro MKT 1.jpg">
-          <h2>
-            As armas da persuasão
-          </h2>
-          <p>
-            R$ 37,40
-          </p>
-        </div>
-        <div class="card17">
-          <img src="./assets/img/Livro MKT 2.jpg">
-          <h2>
-            Crossing the Chasm, 3rd Edition: Marketing and Selling Disruptive Products to Mainstream Customers
-          </h2>
-          <p>
-            R$ 106,60
-          </p>
-        </div>
-        <div class="card17">
-          <img src="./assets/img/Livro MKT 3.jpg">
-          <h2>
-            How Brands Grow: What Marketers Don't Know
-          </h2>
-          <p>
-            R$ 255,65
-          </p>
-        </div>
-      </div>
-    </div>
-    <footer>
-      <p>Trabalho desenvolvido pelo Grupo 1 - Gama Academy</p>
-    </footer>
-    <script src="/assets/js/script.js"></script>
-  </body>
 </html>
