--- a/index.html
+++ b/index.html
@@ -115,6 +115,6 @@
     <footer>
       <p>Trabalho desenvolvido pelo Grupo 1 - Gama Academy</p>
     </footer>
-    <script src="/assets/js/script.js"></script>
+    <script src="/js/script.js"></script>
   </body>
 </html>
