--- a/resultado.html
+++ b/resultado.html
@@ -274,6 +274,6 @@
     <footer>
       <p>Trabalho desenvolvido pelo Grupo 1 - Gama Academy</p>
     </footer>
-    <script src="/assets/js/script.js"></script>
+    <script src="/js/script.js"></script>
   </body>
 </html>
