--- a/testevocacional2.html
+++ b/testevocacional2.html
@@ -8,7 +8,7 @@
   <title>Tech Vocacional</title>
   <link rel="shortcut icon" type="imagex/png" href="/assets/img/Logo Azul escurop.png" />
   <link rel="stylesheet" href="/style-vocacional2.css" />`
-  <script src = "assets/js/script.js"></script>
+  <script src = "js/script.js"></script>
 </head>
 
 <body>
@@ -161,7 +161,7 @@
   <footer>
     <p>Trabalho desenvolvido pelo Grupo 1 - Gama Academy</p>
   </footer>
-  <script src="/assets/js/script.js"></script>
+  <script src="/js/script.js"></script>
 </body>
 
 </html>
