feat: reajuste de css

--- a/pages/index.html
+++ b/pages/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tech Vocacional</title>
-    <link rel="shortcut icon" type="imagex/png" href="/assets/img/Logo%20Azul%20escurop.png"/>
-    <link rel="stylesheet" href="/pages/css/style.css"/>
+    <link rel="shortcut icon" type="imagex/png" href="../assets/img/Logo%20Azul%20escurop.png"/>
+    <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
     <header class="header">
       <nav>
-        <a href="/pages/index.html">
-          <img class="logo-branca" src="/assets/img/Logo%20clara.png" alt="logo tech vocacional branca"/>
+        <a href="index.html">
+          <img class="logo-branca" src="../assets/img/Logo%20clara.png" alt="logo tech vocacional branca"/>
         </a>
     </header>
 
@@ -26,7 +26,7 @@
           exclusivamente para os setores de tecnologia e descubra o que melhor
           se encaixa para você!
         </p>
-        <a href="/pages/testevocacional2.html"><button class="btnclass">Faça seu teste</button></a>
+        <a href="../pages/testevocacional2.html"><button class="btnclass">Faça seu teste</button></a>
       </div>
     </div>
 
@@ -40,7 +40,7 @@
             compatível a eles.
           </p>
         </div>
-        <img src="/assets/img/teste%20vocacional.png" />
+        <img src="../assets/img/teste%20vocacional.png" />
       </div>
     </div>
 
@@ -48,7 +48,7 @@
       <h1>Áreas da tecnologia</h1>
       <div class="contentsection2">
         <div class="card">
-          <img src="/assets/img/dev.png">
+          <img src="../assets/img/dev.png">
           <h2>
             Dev Full Stack
           </h2>
@@ -58,7 +58,7 @@
         </div>
 
         <div class="card">
-          <img src="/assets/img/UX.png">
+          <img src="../assets/img/UX.png">
           <h2>
             Product Design
           </h2>
@@ -68,7 +68,7 @@
         </div>
 
         <div class="card">
-          <img src="/assets/img/Marketing.png">
+          <img src="../assets/img/Marketing.png">
           <h2>
             Marketing
           </h2>
@@ -78,7 +78,7 @@
         </div>
 
         <div class="card">
-          <img src="/assets/img/sales.png">
+          <img src="../assets/img/sales.png">
           <h2>
             Vendas (inside sales)
           </h2>
@@ -91,7 +91,7 @@
 
     <div class="section1">
       <div class="contentsection1">
-        <img src="/assets/img/Migração.png" />
+        <img src="../assets/img/Migração.png" />
         <div class="section1text">
           <h1>Por que migrar?</h1>
           <p>
@@ -106,7 +106,7 @@
     <div class="section1 section3">
       <div class="section1text">
         <h1>Venha fazer o seu teste!</h1>
-        <a href="/pages/testevocacional2.html">
+        <a href="../pages/testevocacional2.html">
           <button class="btnclass btnclass2">Faça seu teste</button>
         </a>
       </div>
