--- a/pages/resultado.html
+++ b/pages/resultado.html
@@ -5,19 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Vocacional</title>
-    <link rel="shortcut icon" type="imagex/png" href="/assets/img/Logo%20Azul%20escurop.png"/>
+    <link rel="shortcut icon" type="imagex/png" href="../assets/img/Logo%20Azul%20escurop.png"/>
     <link rel="stylesheet" href="css/style.css"/>
   </head>
   <body>
     <header class="header">
       <nav>
-        <a href="/pages/index.html">
-          <img class="logo-branca" src="/assets/img/Logo%20clara.png" alt="logo tech vocacional branca"
+        <a href="../pages/index.html">
+          <img class="logo-branca" src="../assets/img/Logo%20clara.png" alt="logo tech vocacional branca"
           />
         </a>
       </nav>
       <nav class="navbar">
-        <a href="/pages/index.html">Início</a>
+        <a href="../pages/index.html">Início</a>
       </nav>  
     </header> 
     <div class="section4">
@@ -34,7 +34,7 @@
     <div class="section2">
       <div class="contentsection2">
         <div class="card">
-          <img src="/assets/img/dev.png">
+          <img src="../assets/img/dev.png">
           <h2>
             25% Dev Fullstack
           </h2>
@@ -43,7 +43,7 @@
           </p>
         </div>
         <div class="card">
-          <img src="/assets/img/UX.png">
+          <img src="../assets/img/UX.png">
           <h2>
             25% Product Design
           </h2>
@@ -52,7 +52,7 @@
           </p>
         </div>
         <div class="card">
-          <img src="/assets/img/Marketing.png">
+          <img src="../assets/img/Marketing.png">
           <h2>
             25% Marketing
           </h2>
@@ -61,7 +61,7 @@
           </p>
         </div>
         <div class="card">
-          <img src="/assets/img/sales.png">
+          <img src="../assets/img/sales.png">
           <h2>
             25% Inside sales
           </h2>
@@ -72,7 +72,7 @@
       </div>
     </div>
     <div class="section5">
-      <a href="/pages/testevocacional2.html"><button class="btnsection5">Novo teste</button></a>
+      <a href="../pages/testevocacional2.html"><button class="btnsection5">Novo teste</button></a>
       <a href=" "><button class="btnsection5">Compartilhar</button></a>
     </div>
     <div class="section6">
