--- a/pages/testevocacional2.html
+++ b/pages/testevocacional2.html
@@ -6,20 +6,20 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tech Vocacional</title>
-  <link rel="shortcut icon" type="imagex/png" href="/assets/img/Logo%20Azul%20escurop.png" />
-  <link rel="stylesheet" href="/pages/css/style-vocacional2.css" />`
+  <link rel="shortcut icon" type="imagex/png" href="../assets/img/Logo%20Azul%20escurop.png" />
+  <link rel="stylesheet" href="../pages/css/style-vocacional2.css"/>
   <script src = "../script.js"></script>
 </head>
 
 <body>
   <header class="header">
     <nav>
-      <a href="/pages/index.html">
-        <img class="logo-branca" src="/assets/img/Logo%20clara.png" alt="logo tech vocacional branca" />
+      <a href="../pages/index.html">
+        <img class="logo-branca" src="../assets/img/Logo%20clara.png" alt="logo tech vocacional branca" />
       </a>
     </nav>
     <nav class="navbar">
-      <a href="/pages/index.html">Início</a>
+      <a href="../pages/index.html">Início</a>
     </nav>
   </header>
   <div class="section1">
@@ -32,7 +32,7 @@
           assinale a opção que mais se idenficar, combinado?
         </p>
       </div>
-      <img src="/assets/img/Dúvida.png" />
+      <img src="../assets/img/Dúvida.png" />
     </div>
   </div>
   <section class="section2">
@@ -151,7 +151,7 @@
           <br>
         </form>
       </div>
-      <a href="/pages/resultado.html">
+      <a href="../pages/resultado.html">
         <button class="btnclass btnclass2">Enviar respostas</button>
       </a>
       
