--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tech Vocacional</title>
     <link rel="shortcut icon" type="imagex/png" href="/assets/img/Logo Azul escurop.png"/>
-    <link rel="stylesheet" href="/assets/css/style.css"/>
+    <link rel="stylesheet" href="assets/css/style.css"/>
   </head>
 
   <body>
