--- a/testevocacional2.html
+++ b/testevocacional2.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tech Vocacional</title>
   <link rel="shortcut icon" type="imagex/png" href="/assets/img/Logo Azul escurop.png" />
-  <link rel="stylesheet" href="/style-vocacional2.css" />`
+  <link rel="stylesheet" href="style-vocacional2.css" />`
   <script src = "assets/js/script.js"></script>
 </head>
 
